data/derived/comb/progs/unify/prog5123.ml.out
Characters 82-83:
  | h::t  -> if [(k,d)] = h then d else assoc (d,k,t);;
                          ^
Error: This expression has type 'a * 'b
       but an expression was expected of type ('a * 'b) list
